@@ -2,6 +2,7 @@
 
 	* src/boards/submarine.c: fixed to display the help
 	* src/boards/reversecount.c: fixed highlighting the dice was resseting the dic to 1
+	* src/boards/reading.c: fixed bug: the game starts when help is displayed
 
 2003-08-18  Bruno coudoin  <bruno.coudoin@free.fr>
 
